# src/internal/cmd/main.go
@@ -18,7 +18,7 @@ func SetupRouter() *gin.Engine {
 	horarioHandler := handlers.NewHTTPHandler(horariosrv)
 	r.GET("/ping", handlers.Ping)
 	r.GET("/availableHours", horarioHandler.GetAvailableHours)
-	r.POST("/newEntry", horarioHandler.NewEntry)
+	r.POST("/newEntry", horarioHandler.PostNewEntry)
 
 	return r
 }
